# arculator-1

./: .gitignore  Dockerfile  Makefile  Makefile.in  README.md  Readme-EMSCRIPTEN.txt  a.out.js  aclocal.m4  config.status  configure  configure.ac  libtool  make-docker
.github/workflows/: build.yml
docs/: arculator.html
gh-pages/: arculator.html
js/: browser_keys.js  emu_input.js
mac/: generate-Info.plist
podules/aeh50/src/: aeh50.c
podules/aka05/src/: Makefile  Makefile.in
podules/aka10/src/: Makefile  Makefile.in
podules/aka12/src/: Makefile  Makefile.in
podules/aka16/src/: Makefile  Makefile.in
podules/aka31/src/: Makefile
podules/common/cdrom/: cdrom-emscripten-ioctl.c  cdrom-linux-ioctl.c  cdrom.h
podules/common/scsi/: hdd_file.c  scsi_cd.c  scsi_config.c  scsi_hd.c
podules/common/sound/: sound_alsain.c  sound_in_null.c
podules/lark/src/: Makefile  Makefile.in
podules/midimax/src/: Makefile.in
podules/oak_scsi/src/: Makefile  Makefile.in  ncr5380.c  oak_scsi.c  oak_scsi.h
podules/ultimatecdrom/src/: mitsumi.c  ultimatecdrom.c
src/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mingw  arc.h  arctest.c  arculator.xrc  arculatorweb  arm.c  browser_keys.js  c-embed-build.c  c-embed.h  cmos.c  colourcard.c  config.c  ddnoise.c  ddnoise.h  disc.c  disc_adf.c  disc_adf.h  disc_apd.c  disc_apd.h  disc_fdi.c  disc_fdi.h  disc_hfe.c  disc_hfe.h  disc_scp.c  disc_scp.h  embed.c  embed.h  emscripten-console.c  emscripten_main.c  emscripten_podule_config.c  fdi2raw.c  g16.c  g332.c  g332.h  gl.c  gl.h  (+50 more)
web/: arculator.html  serve.js  shell.html  ui.js
